test/types/enum/sizeIsParam.good
sizeIsParam.chpl:9: error: .size is param
